@startuml

title __SRC's Class Diagram__\n
 class Customer {
        - firstName : String
        - lastName : String
        - phoneNum : int
        + Customer()
        + getAddres()
        + getFirstName()
        + getLastName()
        + getPhoneNum()
        + setAddres()
        + setFirstName()
        + setLastName()
        + setPhoneNum()
    }


  class Location {
        - adjacencies : DistanceTo[]
        - distance : int
        - id : int
        - ptr : List<Location>
        + Location()
        + compareTo()
        + getAdjacencies()
        + getDistance()
        + getId()
        + getParent()
        + getPtr()
        + getType()
        + setAdjacencies()
        + setDistance()
        + setId()
        + setParent()
        + setPtr()
        + setType()
        + toString()
    }

    enum LocationType {
      CUSTOMER
      DELIVERYPERSON
      RESTURANT
    }
  
    class Restaurant {
        - name : String
        - phoneNum : int
        + Restaurant()
        + getAddres()
        + getName()
        + getPhoneNum()
        + setAddres()
        + setName()
        + setPhoneNum()
    }
  


  Customer -up-|> Location
  DeliveryPerson -up-|> Location
  Location o-- Location : parent
  Location o-- LocationType : type
  Restaurant -up-|> Location
  Restaurant o-- Address : addres


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
